[package]
name = "mole-anchor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MoLE Anchor: grants IHAT Endorsements over the two-exchange grant flow"

[dependencies]
mole-core = { workspace = true }
ihat = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
rand_core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "mole_anchor"

[[bin]]
name = "mole-anchor"
path = "src/main.rs"
