[package]
name = "mole-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared MoLE protocol machinery: wire encoding, Mole HTTP authentication scheme, configuration formats"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
curve25519-dalek = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
