[package]
name = "mole-moderator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MoLE Moderator: challenges, Redeem & Issue, Presentation and Update"

[dependencies]
mole-core = { workspace = true }
ihat = { workspace = true }
anonymous-credit-tokens = { workspace = true }
curve25519-dalek = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rand_core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "mole_moderator"

[[bin]]
name = "mole-moderator"
path = "src/main.rs"
